--- a/css/styles.css
+++ b/css/styles.css
@@ -60,6 +60,12 @@ body {
   margin: -1px;
 }
 
+.is-hidden {
+  visibility: hidden;
+  opacity: 0;
+  pointer-events: none;
+}
+
 .container {
   width: 1200px;
   padding-left: 15px;
@@ -70,7 +76,7 @@ body {
 /* --------------------HEADER-------------------- */
 .page-header {
   padding-top: 20px;
-  padding-bottom: 20px;
+  padding-bottom: 0px;
   border-bottom: 1px solid #ececec;
 }
 
@@ -100,6 +106,10 @@ body {
   color: #000000;
 }
 
+.page-header .logo {
+  padding-bottom: 20px;
+}
+
 /* site-nav */
 .main-nav {
   display: flex;
@@ -121,17 +131,35 @@ body {
 
   font-weight: 500;
   letter-spacing: 0.02em;
+
+  transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
-.site-nav .link.current,
+/* .site-nav .link.current, */
 .site-nav .link:hover,
 .site-nav .link:focus {
   color: var(--accent-color);
 }
 
+.site-nav .link.current {
+  color: var(--accent-color);
+  padding-bottom: 0;
+}
+
+.site-nav .link.current::after {
+  content: "";
+  display: flex;
+  width: 100%;
+  height: 4px;
+  margin-top: 28px;
+  border-radius: 2px;
+  background-color: var(--accent-color);
+}
+
 /* auth-nav */
 .auth-nav {
   display: flex;
+  padding-bottom: 20px;
 }
 
 .auth-nav-item + .auth-nav-item {
@@ -147,6 +175,8 @@ body {
   font-weight: 500;
   letter-spacing: 0.02em;
   color: var(--secondary-text-color);
+
+  transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .auth-nav-icon {
@@ -204,6 +234,8 @@ body {
   text-align: center;
   color: var(--white-text-color);
   background: var(--accent-color);
+
+  transition: background 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .hero-btn:hover,
@@ -270,12 +302,30 @@ body {
 }
 
 .work-list-item {
+  position: relative;
   width: calc((100% - 2 * 30px) / 3);
   margin-right: 30px;
 }
 
 .work-list-item:last-child {
   margin-right: 0;
+}
+
+.work-list-item-text {
+  position: absolute;
+  bottom: 0;
+  left: 0;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  width: 100%;
+  height: 70px;
+  
+  font-weight: 700;
+  text-transform: uppercase;
+
+  color: #FFFFFF;
+  background-color: #2F303ACC;
 }
 
 /* Наша команда */
@@ -346,6 +396,9 @@ body {
   border-radius: 50%;
   background-color: var(--primary-bg-color);
   color: var(--icon-color);
+
+  transition: background 250ms cubic-bezier(0.4, 0, 0.2, 1),
+              color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .soc-list-icon {
@@ -365,7 +418,6 @@ body {
 }
 
 .client-list-item {
-  /* width: calc((100% - 5*30px)/6); */
   width: 170px;
   height: 92px;
   margin-right: 30px;
@@ -384,6 +436,9 @@ body {
   border: 1px solid var(--icon-color);
   border-radius: 4px;
   color: var(--icon-color);
+
+  transition: border-color 250ms cubic-bezier(0.4, 0, 0.2, 1),
+              color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .client-list-icon {
@@ -430,6 +485,8 @@ body {
   font-style: normal;
   line-height: 1.71;
   color: rgba(255, 255, 255, 0.6);
+
+  transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .address-list .address.link:hover,
@@ -475,6 +532,9 @@ body {
   border-radius: 50%;
   background-color: #ffffff1a;
   color: var(--white-text-color);
+
+  transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1),
+              box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .footer-soc-icon {
@@ -485,6 +545,55 @@ body {
 .footer-soc-link:focus {
   background-color: var(--accent-color);
   box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
+}
+
+.backdrop {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100vw;
+  height: 100vh;
+
+  background-color: #00000033;
+
+  transition: opacity 250ms cubic-bezier(0.4, 0, 0.2, 1),
+              visibility 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.backdrop.is-hidden .modal{
+  transform: translate(-50%, -50%) scale(0);
+}
+
+.modal {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%) scale(1);
+  width: 528px;
+  min-height: 581px;
+
+  background-color: var(--primary-bg-color);
+  border-radius: 4px;
+  box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12),
+              0px 1px 1px rgba(0, 0, 0, 0.14),
+              0px 2px 1px rgba(0, 0, 0, 0.2);
+
+  transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.modal-close-btn {
+  position: absolute;
+  top: 8px;
+  right: 8px;
+  width: 30px;
+  height: 30px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+
+  background-color: transparent;
+  border: 1px solid #0000001A;
+  border-radius: 50%;
 }
 
 /* --------------------PORTFOLIO-------------------- */
@@ -513,6 +622,10 @@ body {
   text-align: center;
   color: var(--main-text-color);
   background: #f5f4fa;
+
+  transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1),
+              background 250ms cubic-bezier(0.4, 0, 0.2, 1),
+              box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .filter-list-btn:hover,
@@ -543,6 +656,8 @@ body {
 
 .projects-list-link {
   display: block;
+
+  transition: box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .projects-list-link:hover,
@@ -567,4 +682,34 @@ body {
   font-size: 16px;
   line-height: 1.88;
   color: var(--secondary-text-color);
+}
+
+.projects-list-cover-wrap {
+  position: relative;
+  overflow: hidden;
+}
+
+.projects-list-cover-text {
+  position: absolute;
+  top: 0;
+  left: 0;
+  transform: translateY(100%);
+  transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
+
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  height: 100%;
+  padding: 24px;
+
+  font-size: 18px;
+  line-height: 1.56;
+  color: #FFFFFF;
+  background-color: rgba(33, 150, 243, 0.9);
+  overflow: auto;
+}
+
+.projects-list-link:hover .projects-list-cover-text,
+.projects-list-link:focus .projects-list-cover-text {
+  transform: translateY(0);
 }
