--- a/css/styles.css
+++ b/css/styles.css
@@ -5,6 +5,7 @@
   --primary-bg-color: #ffffff;
   --accent-color: #2196f3;
   --icon-color: #afb1b8;
+  --timing-function: cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 p,
@@ -132,7 +133,7 @@ body {
   font-weight: 500;
   letter-spacing: 0.02em;
 
-  transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  transition: color 250ms var(--timing-function);
 }
 
 /* .site-nav .link.current, */
@@ -176,7 +177,7 @@ body {
   letter-spacing: 0.02em;
   color: var(--secondary-text-color);
 
-  transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  transition: color 250ms var(--timing-function);
 }
 
 .auth-nav-icon {
@@ -235,7 +236,7 @@ body {
   color: var(--white-text-color);
   background: var(--accent-color);
 
-  transition: background 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  transition: background 250ms var(--timing-function);
 }
 
 .hero-btn:hover,
@@ -397,8 +398,8 @@ body {
   background-color: var(--primary-bg-color);
   color: var(--icon-color);
 
-  transition: background 250ms cubic-bezier(0.4, 0, 0.2, 1),
-              color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  transition: background 250ms var(--timing-function),
+              color 250ms var(--timing-function);
 }
 
 .soc-list-icon {
@@ -437,8 +438,8 @@ body {
   border-radius: 4px;
   color: var(--icon-color);
 
-  transition: border-color 250ms cubic-bezier(0.4, 0, 0.2, 1),
-              color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  transition: border-color 250ms var(--timing-function),
+              color 250ms var(--timing-function);
 }
 
 .client-list-icon {
@@ -486,7 +487,7 @@ body {
   line-height: 1.71;
   color: rgba(255, 255, 255, 0.6);
 
-  transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  transition: color 250ms var(--timing-function);
 }
 
 .address-list .address.link:hover,
@@ -533,8 +534,8 @@ body {
   background-color: #ffffff1a;
   color: var(--white-text-color);
 
-  transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1),
-              box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  transition: background-color 250ms var(--timing-function),
+              box-shadow 250ms var(--timing-function);
 }
 
 .footer-soc-icon {
@@ -556,8 +557,8 @@ body {
 
   background-color: #00000033;
 
-  transition: opacity 250ms cubic-bezier(0.4, 0, 0.2, 1),
-              visibility 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  transition: opacity 250ms var(--timing-function),
+              visibility 250ms var(--timing-function);
 }
 
 .backdrop.is-hidden .modal{
@@ -578,7 +579,7 @@ body {
               0px 1px 1px rgba(0, 0, 0, 0.14),
               0px 2px 1px rgba(0, 0, 0, 0.2);
 
-  transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  transition: transform 250ms var(--timing-function);
 }
 
 .modal-close-btn {
@@ -623,9 +624,9 @@ body {
   color: var(--main-text-color);
   background: #f5f4fa;
 
-  transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1),
-              background 250ms cubic-bezier(0.4, 0, 0.2, 1),
-              box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  transition: color 250ms var(--timing-function),
+              background 250ms var(--timing-function),
+              box-shadow 250ms var(--timing-function);
 }
 
 .filter-list-btn:hover,
@@ -657,7 +658,7 @@ body {
 .projects-list-link {
   display: block;
 
-  transition: box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  transition: box-shadow 250ms var(--timing-function);
 }
 
 .projects-list-link:hover,
@@ -694,7 +695,7 @@ body {
   top: 0;
   left: 0;
   transform: translateY(100%);
-  transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  transition: transform 250ms var(--timing-function);
 
   display: flex;
   justify-content: center;
