--- a/css/styles.css
+++ b/css/styles.css
@@ -548,6 +548,8 @@ body {
   box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
 }
 
+/* --------------------MODAL-------------------- */
+
 .backdrop {
   position: fixed;
   top: 0;
@@ -562,7 +564,8 @@ body {
 }
 
 .backdrop.is-hidden .modal{
-  transform: translate(-50%, -50%) scale(0);
+  transform: translate(-50%, -50%) scale(.5);
+  opacity: 0;
 }
 
 .modal {
@@ -572,6 +575,7 @@ body {
   transform: translate(-50%, -50%) scale(1);
   width: 528px;
   min-height: 581px;
+  opacity: 1;
 
   background-color: var(--primary-bg-color);
   border-radius: 4px;
@@ -579,7 +583,8 @@ body {
               0px 1px 1px rgba(0, 0, 0, 0.14),
               0px 2px 1px rgba(0, 0, 0, 0.2);
 
-  transition: transform 250ms var(--timing-function);
+  transition: transform 250ms var(--timing-function),
+              opacity 250ms var(--timing-function);
 }
 
 .modal-close-btn {
